--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* A root element is used to define the color schemes used throughout the webpage */
 :root{
     --background-color1: #000000;
     --background-color: #222831;
@@ -10,6 +11,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* A select a certain element we usually use the class or dot selector in css */
 .container{
     /* border: 2px solid white; */
     border-radius: 0 20% 20% 20%;
@@ -35,19 +37,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     
-}
-
-@media screen and (min-width: 1200px ){
-    .content{
-        width: 95%;
-        height: 75vh;
-    }
-
-    .container{  
-        width: 60%;
-        height: 80vh;
-        
-    }
 }
 
 h1{
@@ -115,6 +104,8 @@ button{
     border: none;
 }
 
+/* :hover state is used when we want different contrast of color when passing over to the button */
+
 button:hover{
     background: linear-gradient(90deg, var(--background-color3), var(--background-color2));
 }
@@ -135,6 +126,8 @@ select{
     margin-left: 1em;
     overflow: hidden;
 }
+
+
 
 .attract{
     color: white;
@@ -204,7 +197,10 @@ nav {
 nav > ul {
     display: flex;
     justify-content: space-evenly;
+    list-style-type: none;
 }
+
+
 
 a{
     text-decoration: none;
@@ -213,4 +209,70 @@ a{
 .copyright{
     margin: auto 0;
     text-align: center;
+}
+
+
+/* A media query is used to make the webpage responsive */
+
+@media screen and (max-width: 979px){
+    .attract{
+        color: white;
+        display: flex;
+        position: absolute;
+        top: 100px;
+        right: 0.6rem;
+        width: 50%;
+        height: 25vh;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .rental-logo{
+        width: 15%;
+        margin-left: 10px;
+    }
+
+    .sub_tag{
+        position: absolute;
+        top: 13rem;
+        width: 100%;
+        height: auto;
+    }
+    
+    .showcase{
+        position: absolute;
+        top: 17rem;
+        width: 20%;
+        height: auto;
+        font-size: 0.5rem;
+    }
+    
+    .subs{
+        font-size: 0.6rem;
+    }
+
+    h4{
+        width: 60%;
+        font-size: 20px;
+    
+    }
+
+    .Date{
+        width: 30%;
+        margin-left: 1em;
+        overflow: hidden;
+    }
+}
+
+@media screen and (min-width: 1200px ){
+    .content{
+        width: 95%;
+        height: 75vh;
+    }
+
+    .container{  
+        width: 60%;
+        height: 80vh;
+        
+    }
 }
