--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,11 @@ nav > ul {
 
 a{
     text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    background-color: var(--backgournd-color3);
 }
 
 .copyright{
